--- a/src/constants/constants.scss
+++ b/src/constants/constants.scss
@@ -1,4 +1,4 @@
-$primary-text: "#000000";
-$secondary-text: "#E8E8E8";
+$primary-text: #000000;
+$secondary-text: #e8e8e8;
 
 $border: 1px solid #e8e8e8;
