--- a/src/components/EmployeeDetails/EmployeeDetailsRow/employee-details-row.scss
+++ b/src/components/EmployeeDetails/EmployeeDetailsRow/employee-details-row.scss
@@ -1,4 +1,4 @@
-@import "../constants/constants.scss";
+@import "../../../constants/constants.scss";
 
 .table__row-selected {
   background-color: $secondary-text;
