--- a/src/components/EmployeeDetails/employee-details.scss
+++ b/src/components/EmployeeDetails/employee-details.scss
@@ -13,7 +13,7 @@ th {
 }
 
 td {
-  padding: 12px 8px;
-  width: 20%;
   border-top: $border;
+  border-bottom: $border;
+  transition: 0.25s ease;
 }
