--- a/src/components/PaginationBar/pagination-bar.scss
+++ b/src/components/PaginationBar/pagination-bar.scss
@@ -1,3 +1,5 @@
+@import "../../constants/constants.scss";
+
 .pagination__bar {
   margin-top: 12px;
   display: flex;
@@ -26,4 +28,18 @@
   transition: 0.2s ease;
   background-color: #ffffff;
   color: #2196f3;
+}
+
+.pagination__delete-button {
+  color: #f9f9f9;
+  padding: 6px 12px;
+  background-color: #e12b2b;
+  outline: none;
+  border: none;
+  border-radius: 16px;
+
+  &:disabled {
+    background-color: #e8e8e8;
+    color: #f9f9f9;
+  }
 }
