--- a/src/pages/App/app.scss
+++ b/src/pages/App/app.scss
@@ -10,4 +10,19 @@ body {
 .app__container {
   width: 80%;
   padding: 0 10%;
+
+  @media (max-width: 650px) {
+    width: 90%;
+    padding: 0 5%;
+  }
+
+  @media (max-width: 550px) {
+    width: 95%;
+    padding: 0 2.5%;
+  }
+
+  @media (max-width: 520px) {
+    width: 98%;
+    padding: 0 1%;
+  }
 }
